# plant-curator

./: .gitignore  README.md  pyproject.toml
plant_curator/: cache.py  caption.py  cli.py  cluster.py  embed.py  ingest.py  score.py  taste.py
